# This is the config file for the python project GDBMiner
# Copyright (c) 2023 Robert Bosch GmbH
# SPDX-License-Identifier: AGPL-3.0
[metadata]
name = GDBMiner
version = 0.0.1
description = Debugger-driven Grammar Mining
author = Max Eisele
author_email = MaxCamillo.Eisele@bosch.com
url = https://link-to-your-project
license = BSD 3-Clause License

[options]
packages = find:
package_dir =  
    =src
zip_safe = True
include_package_data = True

install_requires =
    fuzzingbook >= 1.1
    pyserial >= 3.5
    ghidra-bridge >=1.0.0
    ipython >= 8.10.0
    networkx>=3.0
    notebook>=6.5.2
    pudb>=2022.1.3
    pygdbmi>=0.11.0.0
    pygraphviz >= 1.10

